# openadopt

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  ROADMAP.md  docker-compose.dev.yml  docker-compose.yml
api/: Dockerfile.dev  __init__.py  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 66ca55bcb5dc_create_animals_table.py  6b2ad2a3b3f3_create_animals_table.py  751469c1b056_create_animals_table.py  f56de9310c32_create_users_table.py
api/app/: main.py
api/app/api/: auth.py  dependencies.py
api/app/api/admin/: animals.py
api/app/core/: config.py  database.py  security.py
api/app/core/storage/: factory.py  interface.py  local.py
api/app/models/: animal.py  user.py
api/app/schemas/: animal.py  auth.py
api/app/scripts/: create_super_admin.py
api/app/services/: animal_service.py  auth_service.py
web/: Dockerfile.dev  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/api/: animals.ts  auth.ts  client.ts
web/src/components/: AnimalForm.tsx  DeleteAnimalModal.tsx
web/src/components/animals/: AnimalPhotoManagement.tsx  DeleteAnimalModal.tsx
web/src/components/ui/: ConfirmModal.tsx
web/src/context/: AuthContext.tsx
web/src/hooks/: useHealthCheck.ts
web/src/pages/: LoginPage.tsx
web/src/pages/admin/: AdminDashboard.tsx  AnimalDetailsPage.tsx  AnimalFormPage.tsx  AnimalsPage.tsx
