[project]
name = "openadopt-api"
version = "0.1.0"
description = "Open source animal adoption platform API"
requires-python = ">=3.11"
dependencies = [
    # Core Framework
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "python-multipart==0.0.7",
    # Database
    "sqlalchemy==2.0.25",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
    "asyncpg==0.29.0",
    # Authentication
    "fastapi-users[sqlalchemy]==12.1.3",
    "pyjwt==2.8.0",
    "bcrypt==4.1.2",
    # Validation & Settings
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "httpx==0.26.0",
    "pytest-cov==4.1.0",
    "black==24.1.1",
    "ruff==0.1.14",
    "mypy==1.8.0",
]

[project.scripts]
create-super-admin = "app.scripts.create_super_admin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
